--- a/ReadMe
+++ b/ReadMe
@@ -1,4 +1,4 @@
 Solutions to the book "A Collection of Data Science Take-Home Challenges".
 
-## Note:
+Note:
 This book is a great resource for aspiring data scientists to learn and refresh their skills in data analysis. Further modeling explanations will be provided here shortly.
