--- a/ReadMe
+++ b/ReadMe
@@ -2,3 +2,5 @@ Solutions to the book "A Collection of Data Science Take-Home Challenges".
 
 Note:
 This book is a great resource for aspiring data scientists to learn and refresh their skills in data analysis. Further modeling explanations will be provided here shortly.
+
+Loan Granting - XGBoost (Decision Tree)
